--- a/S2.html
+++ b/S2.html
@@ -23,7 +23,7 @@
     <img src=Pound_layer_cake.jpg>></SCRipt:src></img>
 </figure>
 <li>ice scream</li>
-<img src=260px-Ice_Cream_dessert_02.jpg>></SCRipt:src></img>
+<img src=>260px-Ice_Cream_dessert_02.jpg</SCRipt:src></img>
 <p>And other items that are used in their preparation:</p>
 <ul>
     <li>Chocolate chips</li>
