--- a/S2.html
+++ b/S2.html
@@ -14,6 +14,8 @@
 <body>
     Chocolate is one of the most popular foods in the world, and it is used in the composition of many desserts of different shapes such .</body>
     <Figure>
+     <area shape="circle" coords="337,300,44" alt="Coffee" href="coffee.htm">
+</map>    
         <img src="Chocolate.jpg"></SCRipt:src></img>
     </Figure>
 <body>Chocolate was first discovered in South America, as a result of the spread of cocoa trees in that region.</body>
