--- a/S2.html
+++ b/S2.html
@@ -13,26 +13,24 @@
 </figure>
 <body>
     Chocolate is one of the most popular foods in the world, and it is used in the composition of many desserts of different shapes such .</body>
-    <Figure>
-     <area shape="circle" coords="337,300,44" alt="Coffee" href="coffee.htm">
-</map>    
-        <img src="Chocolate.jpg"></SCRipt:src></img>
+    <Figure>   
+        <img src="Chocolate.jpg">alt></SCRipt:src></img>
     </Figure>
 <body>Chocolate was first discovered in South America, as a result of the spread of cocoa trees in that region.</body>
 <ul>varieties:-</varieties:-></ul>
 <li>cake</li>
 <figure>
-    <img src=Pound_layer_cake.jpg>></SCRipt:src></img>
+    <img src=Pound_layer_cake.jpg>alt></SCRipt:src></img>
 </figure>
-<li>ice scream</li>
-<img src=>260px-Ice_Cream_dessert_02.jpg</SCRipt:src></img>
+<li>ice scream< alt></li>
+<img src=>260px-Ice_Cream_dessert_02.jpg<alt></SCRipt:src></img>
 <p>And other items that are used in their preparation:</p>
 <ul>
-    <li>Chocolate chips</li>
-    <li>Hot Chocolate</li>
+    <li>Chocolate chips <alt></li>
+    <li>Hot Chocolate<alt></alt></li>
 </ul>
 <ol>
-    <li> <img src="OIP (2).jpg"></SCRipt:src></img></li>
-    <li><img src="R (1).jpg"></SCRipt:src></img></li>
+    <li> <img src="OIP (2).jpg">alt></SCRipt:src></img></li>
+    <li><img src="R (1).jpg"></SCRipt:src></img>alt></li>
 </ol>
 </html>
